proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  type: ClusterIP  # NodePort에서 ClusterIP로 변경됩니다.
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000  # 프록시 서버가 실행되는 포트로 설정해야 합니다.

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
spec:
  replicas: 2  # 원하는 Pod의 개수로 설정합니다.
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy-container
          image: walloonam/proxy:v4
          ports:
            - containerPort: 5000  # 프록시 서버가 실행되는 포트
