was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: walloonam/my-fastapi-app:v2
        ports:
        - containerPort: 8000  # FastAPI의 포트 번호를 8000으로 설정

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
  - protocol: TCP
    port: 8000  # 클라이언트가 접근할 포트
    targetPort: 8000  # FastAPI의 포트 번호를 8000으로 설정
