web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  labels:
    app: mypod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mypod
  template:
    metadata:
      labels:
        app: mypod
    spec:
      containers:
      - name: mycontainer
        image: rlaaudgus/final-project3:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mypod-service
spec:
  type: ClusterIP  # LoadBalancer에서 ClusterIP로 변경됩니다.
  selector:
    app: mypod
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
