ingress_html.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip  # Pod IP를 대상으로 사용
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:471112818163:certificate/c5839392-5673-4328-ab5b-591888819419
spec:
  rules:
    - host: adaptercloud.store
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo
                port:
                  number: 80
  tls:
    - hosts:
      - adaptercloud.store
      secretName: demo-tls
